@@ -637,6 +637,7 @@ SOURCES =
 	ip_notifier
 	ip_voter
 	listen_socket_handle
+	load_torrent
 	merkle
 	peer_connection
 	platform_util
