@@ -1,4 +1,5 @@
 
+	* back-port load_torrent_*() functions
 	* fix issue with odd piece sizes
 
 1.2.18 released
